# semester-work-rabin-karp-Triple-Beam-Team

./: CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  demo_benchmark.cpp  search_for_substring.cpp
cmake/: CompilerWarnings.cmake
dataset/: CMakeLists.txt  generate_csv_dataset.py
include/: RabinKarpAlgorithm.hpp
src/: RabinKarpAlgorithm.cpp
